# dngStack

./: CMakeLists.txt  main.cpp
libs/dngImage/: CMakeLists.txt
libs/dngImage/DngImage/: CMakeLists.txt  dngImage.cpp  dngImage.hpp
libs/dngImage/libs/dngSdk/: CMakeLists.txt
libs/dngImage/libs/dngSdk/include/: RawEnvironment.h  dng_gain_map.h  dng_pthread.h
libs/dngImage/libs/dngSdk/src/: dng_gain_map.cpp  dng_image_writer.cpp  dng_pthread.cpp
libs/dngImage/libs/zlib/: CMakeLists.txt
libs/dngProc/: CMakeLists.txt  ColorCore.h  ColorCorrect.h  DngTemp.cpp  DngTemp.h  dngProc.cpp  dngProc.h  dngProcGPU.cpp  matrix_vector.cpp  matrix_vector.h  rawPipeline.glsl
